fix: add CSS to realign mkdocs-material admonitions

--- a/mkdocs_with_pdf/themes/material.scss
+++ b/mkdocs_with_pdf/themes/material.scss
@@ -7,6 +7,13 @@
 }
 
 @media print {
+
+  // admonition icon
+  .md-typeset :is(.admonition-title,summary):before {
+    top: 0.6rem;
+    left: 0.6rem;
+  }
+
   .md-typeset {
     // Tabbed code block container
     .tabbed-set {
